--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1 id="title">Welcome to Greens Kiosk</h1>
     <p>We sell fruits and vegetables</p>
+
+        <input type="text" id="searchInput" placeholder="Search fruits and vegetables..."/>
     <h3>Fruits</h3>
     <ul id="fruList">
         <li>Mangoes</li>
@@ -23,6 +25,8 @@
         <li>Tomatoes</li>
         <li>Kales</li>
     </ul>
+
+
 
     <script src="index.js"></script>
 </body>
